# j-pet-three-gamma-simulation-tools

gateScripts/: Run.cc
gateScripts/Example_8/: Actor.mac  Application.mac  GateMaterials.db  Geometry.mac  Main.mac  Physics.mac  README.md  Source.mac  test.C
gateScripts/GlobalActorReader/: CMakeLists.txt  Event.cc  Event.cxx  Event.h  EventLinkDef.h  GlobalActorReader.cc  GlobalActorReader.hh  HelperFunctions.h  Message.cpp  Message.h  README.md  Run.cc  Run.cc.txt  TreeTransformation.cc  TreeTransformation.h  Variable.hh  readTree.C  readTree.cpp
gateScripts/GlobalActorReader/yuliaVerFromBachlor/: HelperFunctions.h  Run.cc
